--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
 # Changelog
 
-## [Unreleased]
+
+## [0.1.0] - 2019-08-03
 
 ### Added
-- test-files
-- binary files
+- support test-files
+- support binary-files
