--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,12 @@
 # Changelog
 
 
+## [0.2.0] - 2019-08-17
+
+### Changed
+- changed file-names for better readable
+
+
 ## [0.1.0] - 2019-08-03
 
 ### Added
