--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,15 @@
 # Changelog
 
+## [0.3.0] - 2019-09-08
+
+### Added
+- support for sqlite3-database
+- simple event logger
+
+### fixed
+- updateFileSize-method in binary-files had not updated the number of blocks
+- blocksize of binary-files could differ from the data-buffer
+
 
 ## [0.2.1] - 2019-08-27
 
