updates for tag 0.6.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.6.0] - 2019-11-02
+
+### Changed
+- renamed repo from `libKitsunePersistence` to `libKitsunemimiPersistence
+
+
 ## [0.5.0] - 2019-10-07
 
 ### Changed
