--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 # Changelog
 
+## [0.7.0] - 2020-01-17
+
+### Added
+- new file-methods
+
+### Changed
+- update api of file-methods and text-files
+
+
 ## [0.6.1] - 2019-12-30
 
 ### Added
