--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.7.1] - 2020-03-14
+
+### Changed
+- update for using libKitsunemimiCommon 0.12.0
+
+
 ## [0.7.0] - 2020-01-17
 
 ### Added
