--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 # Changelog
 
+## [0.7.2] - 2020-03-26
+
+### Changed
+- sqlite can now be disable via build-config-flag to make it optional
+
+### Fixed
+- writing files in not existing direcotries was fixed
+
+
 ## [0.7.1] - 2020-03-14
 
 ### Changed
