--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.8.0] - 2020-03-28
+
+### Changed
+- changed intializing the logger to optionally only write onto console without writing into a file
+
+
 ## [0.7.2] - 2020-03-26
 
 ### Changed
