--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 # Changelog
 
+## [0.8.1] - 2020-03-29
+
+### Changed
+- update requirements
+- restructure test-files
+
+
 ## [0.8.0] - 2020-03-28
 
 ### Changed
