--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Changelog
 
+## [0.8.2] - 2020-04-13
+
+### Changed
+- update for using libKitsunemimiCommon 0.13.0
+
+
 ## [0.8.1] - 2020-03-29
 
 ### Changed
