--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.9.1] - 2020-08-09
+
+### Changed
+- color for info-output in logger configurable
+- changed color for debug-output from green to blue
+- build tests only in the ci-pipeline, but not everytime when running the build-script
+
+
 ## [0.9.0] - 2020-08-03
 
 ### Added
