--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
 # Changelog
 
+## [0.10.1] - 2020-08-22
+
+### Changed
+- interface of sql-interface
+- colors in logger
+- requirements
+
+
 ## [0.9.1] - 2020-08-09
 
 ### Changed
